# NextRouter

./: .gitignore  Cargo.toml  FEATURE_SUMMARY.md  LOCAL_IP_METRICS.md  NextRouter.sh  README.md  dhcpd.conf  grafana-configure.sh  grafana-manager.sh  grafana-setup.sh  napt-setup.sh  network-dashboard.json  nftables-setup.sh  nftables.conf.template  prometheus-install.md  prometheus-manager.sh  prometheus-rust-quickstart.md  prometheus.sh  prometheus.yml  rust-app-manager.sh  setup-complete.sh  setup-monitor.sh  test-local-ip-metrics.sh  test-monitor.sh  traffic-monitor.service.template  traffic_stats.json
Network-Traffic-Monitor/: Cargo.toml  PROMETHEUS_INTEGRATION.md  TRAFFIC_MONITOR.md
Network-Traffic-Monitor/src/: capture.rs  main.rs  prometheus_server.rs  stats.rs
conf/dnsmasq/: dnsmasq.conf
conf/nftables/: rules.nft
improved/: README.md  monitoring.sh  network.sh  nextrouter.sh  test.sh
packet_loss_rust/: Cargo.toml  README.md  examples.md  grafana_dashboard.json  prometheus_config.yml  run.sh  run_with_prometheus.sh
packet_loss_rust/src/: main.rs
rust-network-sum/: TRAFFIC_MONITOR.md
rust-network-sum/src/: capture.rs  main.rs
src/: capture.rs  main.rs  stats.rs
test-cli-dashboard/: Cargo.toml
test-cli-dashboard/src/: main.rs
test-rust-prometheus-io/: Cargo.toml  QUERY_USAGE.md  README.md  run.sh
test-rust-prometheus-io/src/: client.rs  lib.rs  main.rs  types.rs
