[package]
name = "tcp_window_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.0"
pnet = "0.34"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
statistics = "0.4"
